--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,19 @@
         <activity android:name=".MyListActivity"/>
         <activity android:name=".FicheRestaurantActivity"/>
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAzAY6kbUIycD5BZUjHkS2bo8g_5APmEYM"/>
+
+        <uses-feature
+            android:glEsVersion="0x00020000"
+            android:required="true"/>
+
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
 </manifest>
